added simple map

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <title>
 Neighbour Map Project
 </title>
+<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div id="map"></div>
+
 </body>
-<script src="script/knockout-3.4.1.js"></script>
+
 <script src="script/app.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFa2SaR0YmpwKP3m49Obk2tTERKeRK2Wg&callback=initMap"></script>
+
+<script src="script/knockout-3.4.1.js"></script>
+</body>
 </html>
