--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@ Neighbour Map Project
 
 </body>
 
-<script src="script/app.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFa2SaR0YmpwKP3m49Obk2tTERKeRK2Wg&callback=initMap"></script>
 
 <script src="script/knockout-3.4.1.js"></script>
+<script src="script/jquery-3.1.1.min.js"></script>
+<script src="script/app.js"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFa2SaR0YmpwKP3m49Obk2tTERKeRK2Wg&callback=initMap"></script>
+
+
+
+
 </body>
 </html>
