sucessfully extracted data from foursquare but content window show same value

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ Neighbour Map Project
 
 
 <script src="script/knockout-3.4.1.js"></script>
+
 <script src="script/app.js"></script>
+<script src="script/jquery-3.1.1.min.js"></script>
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFa2SaR0YmpwKP3m49Obk2tTERKeRK2Wg&callback=initMap"></script>
 
 
