--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@ Neighbour Map Project
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="map"></div>
+<div class="panel">
+<button class="hamburger">&#9776;</button>
+<span class="text"> coffee</span>
+</div>
+<div id="container">
+<div id="menu">
+	<input id="show-listings" type="button" value="Show Listings">
+    <input id="hide-listings" type="button" value="Hide Listings">
+</div>
 
+<div id="map"></div>
+</div>
 </body>
 
 
@@ -16,6 +26,7 @@ Neighbour Map Project
 
 <script src="script/app.js"></script>
 <script src="script/jquery-3.1.1.min.js"></script>
+<script src="script/toggle.js"></script>
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFa2SaR0YmpwKP3m49Obk2tTERKeRK2Wg&callback=initMap"></script>
 
 
