added error handler

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-Neighbour Map Project
+Neighbourhood Map Project
 </title>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
